more flare to MapRVA plug in footer

--- a/templates/base.html
+++ b/templates/base.html
@@ -102,7 +102,7 @@
                 </div>
                 <div class="col-md-6 text-md-end">
                     <p class="mb-0">
-                        By <a href="https://maprva.org" target="_blank" class="text-decoration-none">
+                        Proudly built by <a href="https://maprva.org" target="_blank" class="text-decoration-none">
                             MapRVA
                         </a>
                     </p>
