--- a/templates/images/browse_sources.html
+++ b/templates/images/browse_sources.html
@@ -5,11 +5,8 @@
 {% block content %}
 <div class="row">
     <div class="col-12">
-        <div class="d-flex justify-content-between align-items-center mb-4">
+        <div class="mb-4">
             <h1><i class="fas fa-archive me-2"></i>Browse Sources</h1>
-            <a href="{% url 'images:georeference_interface' %}" class="btn btn-primary">
-                <i class="fas fa-map-marked-alt me-2"></i>Start Georeferencing
-            </a>
         </div>
 
         <div class="row">
